--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
   <div class="container">
-    <img src="images/image-qr-code.png">
+    <img src="images/image-qr-code.png" alt="qr-image">
     <div class="info">
       <h2>Improve your front-end skills by building projects</h2>
       <p>Scan the QR conde to visit Front-end Mentor and take your coding skills to the next level!</p>
